[package]
name = "nbundle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.17"
clap = "3.2.5"
anyhow = "1.0.58"
simple-log = "1.5.1"
regex = "1.5.6"
uuid = {version="1.1.2",features=["v4"]}
serde_json = "1.0.81"